@startuml
left to right direction
skinparam roundcorner 5
skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false
skinparam class {
    BackgroundColor white
    ArrowColor #2688d4
    BorderColor #2688d4
}
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define primary_and_foreign_key(x) <b><i><color:#b8861b><&key></color> x</i></b>
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( AnnoScolastico ) {
   primary_key( annoScolasticoId )  :INTEGER 
   column( testo )  :TEXT 
   column( inizio )  :TEXT 
   column( fine )  :TEXT 
 }


table( PeriodoValutazione ) {
   primary_key( periodoValutazioneId )  :INTEGER 
   foreign_key( annoScolasticoId )  :INTEGER 
   column( descrizione )  :TEXT 
   column( inizio )  :TEXT 
   column( fine )  :TEXT 
 }


table( Classe ) {
   primary_key( classeId )  :INTEGER 
   foreign_key( annoScolasticoId )  :INTEGER 
   column( anno )  :INTEGER 
   column( sezione )  :TEXT 
   column( indirizzo )  :TEXT 
   column( articolazione )  :TEXT 
   column( maxGiustificazioni )  :INTEGER 
 }


table( Studente ) {
   primary_key( studenteId )  :INTEGER 
   column( nome )  :TEXT 
   column( cognome )  :TEXT 
   column( sesso )  :TEXT 
   column( email )  :TEXT 
 }


table( Registro ) {
   primary_and_foreign_key( studenteId )  :INTEGER 
   primary_and_foreign_key( classeId )  :INTEGER 
 }


table( Ritirato ) {
   primary_and_foreign_key( studenteId )  :INTEGER 
   primary_and_foreign_key( classeId )  :INTEGER 
   primary_key( data )  :TEXT 
 }


table( Argomento ) {
   primary_key( argomentoId )  :INTEGER 
   column( argomento )  :TEXT 
 }


table( Programmazione ) {
   primary_and_foreign_key( classeId )  :INTEGER 
   primary_and_foreign_key( argomentoId )  :INTEGER 
 }


table( Quesito ) {
   primary_key( quesitoId )  :INTEGER 
   foreign_key( argomentoId )  :INTEGER 
   column( quesito )  :TEXT 
 }


table( Assenza ) {
   primary_and_foreign_key( studenteId )  :INTEGER 
   primary_key( data )  :TEXT 
 }


table( Giustificazione ) {
   primary_and_foreign_key( studenteId )  :INTEGER 
   primary_key( data )  :TEXT 
   column( immotivata )  :INTEGER 
 }


table( PredisposizioneColloquio ) {
   primary_key( predisposizioneColloquioId )  :INTEGER 
   foreign_key( classeId )  :INTEGER 
   column( descrizione )  :TEXT 
   column( data )  :TEXT 
   column( numeroDomande )  :INTEGER 
 }


table( ArgomentiColloquio ) {
   primary_and_foreign_key( predisposizioneColloquioId )  :INTEGER 
   primary_and_foreign_key( argomentoId )  :INTEGER 
   column( numeroDomande )  :INTEGER 
   column( probabilita )  :INTEGER 
 }


table( Indicatore ) {
   primary_key( indicatoreId )  :INTEGER 
   column( indicatore )  :TEXT 
   column( descrizione )  :TEXT 
   column( peso )  :REAL 
 }


table( Descrittore ) {
   primary_key( descrittoreId )  :INTEGER 
   foreign_key( indicatoreId )  :INTEGER 
   column( descrittore )  :TEXT 
   column( descrizione )  :TEXT 
   column( livello )  :INTEGER 
 }


table( Colloquio ) {
   primary_key( colloquioId )  :INTEGER 
   foreign_key( studenteId )  :INTEGER 
   foreign_key( predisposizioneColloquioId )  :INTEGER 
   column( data )  :TEXT 
 }


table( ValutazioneQuesito ) {
   primary_and_foreign_key( colloquioId )  :INTEGER 
   primary_and_foreign_key( descrittoreId )  :INTEGER 
 }


table( Verbale ) {
   primary_and_foreign_key( colloquioId )  :INTEGER 
   primary_and_foreign_key( quesitoId )  :INTEGER 
 }


table( Competenza ) {
   primary_key( competenzaId )  :INTEGER 
   column( competenza )  :TEXT 
   column( cittadinanza )  :INTEGER 
 }


table( Conoscenza ) {
   primary_key( conoscenzaId )  :INTEGER 
   foreign_key( competenzaId )  :INTEGER 
   column( conoscenza )  :TEXT 
   column( obiettivoMinino )  :INTEGER 
 }


table( Abilita ) {
   primary_key( abilitaId )  :INTEGER 
   foreign_key( competenzaId )  :INTEGER 
   column( abilita )  :TEXT 
   column( obiettivoMinino )  :INTEGER 
 }


table( Traguardo ) {
   primary_and_foreign_key( argomentoId )  :INTEGER 
   primary_and_foreign_key( competenzaId )  :INTEGER 
 }


 PeriodoValutazione }o--|| AnnoScolastico
 Classe }o--|| AnnoScolastico
 Registro }o--|| Classe
 Registro }o--|| Studente
 Ritirato }o--|| Registro
 Ritirato }o--|| Registro
 Programmazione }o--|| Argomento
 Programmazione }o--|| Classe
 Quesito }o--|| Argomento
 Assenza }o--|| Studente
 Giustificazione }o--|| Studente
 PredisposizioneColloquio }o--|| Classe
 ArgomentiColloquio }o--|| Argomento
 ArgomentiColloquio }o--|| PredisposizioneColloquio
 Descrittore }o--|| Indicatore
 Colloquio }o--|| PredisposizioneColloquio
 Colloquio }o--|| Studente
 ValutazioneQuesito }o--|| Descrittore
 ValutazioneQuesito }o--|| Colloquio
 Verbale }o--|| Quesito
 Verbale }o--|| Colloquio
 Conoscenza }o--|| Competenza
 Abilita }o--|| Competenza
 Traguardo }o--|| Competenza
 Traguardo }o--|| Argomento

@enduml
